crates/adapters/state-budgets/tests/snapshots/parse__nsw_bp1_key_aggregates_2025_26.snap
---
source: crates/adapters/state-budgets/tests/parse.rs
expression: snapshot
---
{
  "observation_count": 8,
  "series_count": 2,
  "first_rows": [
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "revenue",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2024-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 121870.0,
      "status": "Estimated",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Revenue",
        "nsw_period_label": "2024-25",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "revenue",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2025-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 125031.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Revenue",
        "nsw_period_label": "2025-26",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "revenue",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2026-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 129490.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Revenue",
        "nsw_period_label": "2026-27",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "revenue",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2027-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 134860.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Revenue",
        "nsw_period_label": "2027-28",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "expenses",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2024-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 125224.0,
      "status": "Estimated",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Expenses",
        "nsw_period_label": "2024-25",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "expenses",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2025-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 128419.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Expenses",
        "nsw_period_label": "2025-26",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "expenses",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2026-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 131660.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Expenses",
        "nsw_period_label": "2026-27",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    },
    {
      "dataflow_id": "state_budgets.nsw_budget",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2025-26",
        "jurisdiction": "NSW",
        "line_item": "expenses",
        "paper": "bp1-budget-statement",
        "table": "table_1_1_key_fiscal_aggregates_m"
      },
      "unit": "$ million",
      "time": "2027-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 135144.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2025-06-24",
        "attribution": "Source: NSW Treasury",
        "budget_year": "2025-26",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "jurisdiction": "NSW",
        "jurisdiction_name": "New South Wales",
        "license": "Creative Commons Attribution 3.0 Australia Licence",
        "license_url": "https://creativecommons.org/licenses/by/3.0/au/",
        "nsw_line_item": "Expenses",
        "nsw_period_label": "2027-28",
        "paper": "Budget Paper No. 1",
        "paper_slug": "bp1-budget-statement",
        "parser_version": "parse_v1",
        "publication_title": "Budget Statement",
        "schema_hash": "61014127d5e49374262775674f0abd3bf87731a276cc1deecb69381d4bf811aa",
        "source": "NSW Treasury",
        "source_url": "https://www.budget.nsw.gov.au/sites/default/files/2025-06/bp1-budget-statement-nsw-budget-2025-26.pdf",
        "table_page": "32",
        "table_title": "Table 1.1: Key fiscal aggregates ($m)"
      },
      "source_artifact_id": "23c7a41992d61b5a06b8820efe7b680f8b0fc87b26c75500fbdfc9900dbaee42"
    }
  ]
}
